--- a/isa_2020/pom.xml
+++ b/isa_2020/pom.xml
@@ -52,6 +52,12 @@
   			<version>2.10.8</version>
 		</dependency>
 		
+		<dependency>
+    <groupId>joda-time</groupId>
+    <artifactId>joda-time-hibernate</artifactId>
+    <version>1.3</version>
+</dependency>
+		
 		<!--  Za spring security -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -66,6 +72,12 @@
 			<version>0.6.0</version>
 		</dependency>
 		
+		<!-- Za Mail -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+			<version>2.2.5.RELEASE</version>
+		</dependency>
 		
 	</dependencies>
 
