--- a/isa_2020/src/main/resources/application.properties
+++ b/isa_2020/src/main/resources/application.properties
@@ -19,3 +19,9 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 #optimizacija za postgres upite
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL95Dialect
 
+spring.mail.host = smtp.gmail.com
+spring.mail.username = olgamomirov@gmail.com
+spring.mail.password = Agroviloamamo1* 
+spring.mail.port=587
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable = true
