--- a/isa_2020/.gitignore
+++ b/isa_2020/.gitignore
@@ -3,7 +3,7 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
-!**/src/main/resources/key.txt
+!**/src/main/resources/key.file
 
 
 ### STS ###
